Fixed HTML/body height on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,17 @@
 /* ==== Google font ==== */
 @import url('http://fonts.googleapis.com/css?family=Lato:400,300,700,900');
 
+html{
+  height: 100%;
+}
+
 body {
 	background: #394864;
     font-family: 'Lato', sans-serif;
     font-weight: 300;
     font-size: 16px;
     color: #555;
-    height: 100vh;
+    height: 100%;
     line-height: 1.6em;
     -webkit-font-smoothing: antialiased;
     -webkit-overflow-scrolling: touch;
